--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.11.2"
+  },
+  "engines": {
+    "node": "12.13.1",
+    "yarn": "1.19.1"
   }
+ 
 }
